[package]
name = "leetcode_rs"
version = "0.1.0"
authors = ["Harry Ying <LEXUGEyky@outlook.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Rust solutions to LeetCode"
repository = "https://github.com/LEXUGE/leetcode_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
